fix card layout issues, add section-about's image's gradient

--- a/css/main.css
+++ b/css/main.css
@@ -62,19 +62,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40rem;
-  height: 10rem;
-  margin-bottom: 2rem;
+  max-width: 40rem;
+  margin-bottom: 3rem;
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
   color: #262626;
   background-color: white; }
   .card__title {
     font-size: 2rem;
-    flex: 0 0 80%;
-    text-align: center; }
+    flex: 0 0 75%;
+    text-align: center;
+    padding: 0 1rem; }
   .card__image-container {
-    padding: 3rem;
-    flex: 0 0 20%;
+    padding: 2.5rem;
+    flex: 0 0 25%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -89,7 +89,10 @@ body {
       height: 100%; }
   .card__image {
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    object-fit: cover; }
 
 .logo {
   font-size: 5rem;
@@ -279,13 +282,23 @@ body {
   .section-about__text-container {
     flex: 0 1 45%; }
   .section-about__image-container {
-    flex: 0 1 45%; }
+    flex: 0 1 45%;
+    position: relative; }
+    .section-about__image-container:before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 95%;
+      height: 95%;
+      border-radius: 100%;
+      transform: translate(-50%, -50%);
+      box-shadow: 0 0 12rem rgba(0, 0, 0, 0.4); }
   .section-about__image {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    border-radius: 100%;
-    box-shadow: 0 0 5rem rgba(0, 0, 0, 0.4); }
+    position: relative; }
 
 .section-services {
   background-color: #70bfff;
