--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -2,21 +2,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40rem;
-  height: 10rem;
-  margin-bottom: 2rem;
+  max-width: 40rem;
+  margin-bottom: 3rem;
   box-shadow: 0 1rem 1rem rgba( #000000, 0.2);
   color: $color-font-primary;
   background-color: white;
 
   &__title {
     font-size: 2rem;
-    flex: 0 0 80%;
+    flex: 0 0 75%;
     text-align: center;
+    padding: 0 1rem;
   }
   &__image-container{
-    padding: 3rem;
-    flex: 0 0 20%;
+    padding: 2.5rem;
+    flex: 0 0 25%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,5 +35,8 @@
   &__image {
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
+    object-fit: cover;
   }
 }
