--- a/scss/layout/_section-about.scss
+++ b/scss/layout/_section-about.scss
@@ -16,13 +16,24 @@
 
   &__image-container {
     flex: 0 1 45%;
-
+    position: relative;
+    &:before{
+      content: '';
+      position: absolute;
+      top: 50%;
+      left:50%;
+      width: 95%;
+      height: 95%;
+      border-radius: 100%;
+      transform: translate(-50%,-50%);
+      box-shadow: 0 0 12rem rgba(#000, 0.4);
+    }
   }
+  
   &__image {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    border-radius: 100%;
-        box-shadow: 0 0 5rem rgba(#000, 0.4);
+    position: relative;
   }
 }
